[gd_scene load_steps=15 format=3 uid="uid://0xlmg15n3ewi"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_34b75"]
[ext_resource type="PackedScene" uid="uid://dp7afw6dqwnx5" path="res://Option_Menu.tscn" id="2_3djro"]
[ext_resource type="Texture2D" uid="uid://cutyf7swkffkj" path="res://Textures/kenney_tiny-dungeon/Tilemap/tilemap.png" id="2_ld2wv"]
[ext_resource type="Texture2D" uid="uid://cequ7xbmxw4a0" path="res://Textures/kenney_ui-pack-rpg-expansion/Spritesheet/uipack_rpg_sheet.png" id="2_uljxs"]
[ext_resource type="Texture2D" uid="uid://ixdb5g326cbb" path="res://Textures/kenney_ui-pack-rpg-expansion/PNG/buttonSquare_blue_pressed.png" id="3_iqfbi"]
[ext_resource type="Texture2D" uid="uid://cth140xns2snc" path="res://Textures/kenney_ui-pack-rpg-expansion/PNG/buttonSquare_blue.png" id="4_1p45h"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mxpfb"]
texture = ExtResource("2_ld2wv")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSet" id="TileSet_7ogqf"]
sources/0 = SubResource("TileSetAtlasSource_mxpfb")

[sub_resource type="AtlasTexture" id="AtlasTexture_pv61j"]
atlas = ExtResource("2_uljxs")
region = Rect2(1, 377, 99, 99)

[sub_resource type="SystemFont" id="SystemFont_djirp"]
font_names = PackedStringArray("Impact")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8o11m"]
texture = ExtResource("3_iqfbi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6u7re"]
texture = ExtResource("4_1p45h")

[sub_resource type="SystemFont" id="SystemFont_goxa1"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_8j8my"]
font_names = PackedStringArray("Impact")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_34b75")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(2, 0)
scale = Vector2(15, 13.5)
tile_set = SubResource("TileSet_7ogqf")
format = 2
layer_0/tile_data = PackedInt32Array(7, 262144, 4, 0, 262144, 1610612740, 262151, 262144, 1342177284, 262144, 262144, 805306372, 1, 196608, 4, 2, 131072, 4, 3, 131072, 4, 4, 196608, 4, 5, 131072, 4, 6, 131072, 4, 65543, 131072, 1342177284, 131079, 131072, 1342177284, 196615, 196608, 1342177284, 262150, 131072, 805306372, 262149, 131072, 805306372, 262148, 131072, 805306372, 262147, 131072, 805306372, 262146, 196608, 805306372, 262145, 196608, 805306372, 65536, 131072, 1610612740, 131072, 131072, 1610612740, 196608, 131072, 1610612740, 131074, 0, 4, 196612, 65536, 4, 65542, 65536, 4, 196611, 0, 4, 131075, 0, 4, 65539, 0, 4, 65540, 0, 4, 131076, 0, 4, 131077, 0, 4, 65541, 0, 4, 196613, 0, 4, 131078, 0, 4, 196614, 0, 4, 196610, 0, 4, 131073, 65536, 4, 65538, 65536, 4, 65537, 0, 4, 196609, 0, 4)

[node name="BGImage" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_pv61j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -47.0
offset_right = 145.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_djirp")
theme_override_font_sizes/font_size = 44
theme_override_styles/pressed = SubResource("StyleBoxTexture_8o11m")
theme_override_styles/normal = SubResource("StyleBoxTexture_6u7re")
text = "Play"

[node name="Option" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_goxa1")
theme_override_font_sizes/font_size = 44
theme_override_styles/pressed = SubResource("StyleBoxTexture_8o11m")
theme_override_styles/normal = SubResource("StyleBoxTexture_6u7re")
text = "Option"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_8j8my")
theme_override_font_sizes/font_size = 44
theme_override_styles/pressed = SubResource("StyleBoxTexture_8o11m")
theme_override_styles/normal = SubResource("StyleBoxTexture_6u7re")
text = "Exit
"

[node name="OptionMenu" parent="." instance=ExtResource("2_3djro")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
